Fix T74601: Cut Particles to Shape fails for transformed object